jenkins/templates/ingress.yaml
# Example for kind cluster with ingress

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    host: jenkins.cloud.dheeraj.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: jenkins-ui
            port:
              number: 8080
